--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,10 @@
     "ranges": "cpp",
     "span": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
-  }
+    "variant": "cpp",
+    "charconv": "cpp",
+    "complex": "cpp",
+    "source_location": "cpp",
+    "format": "cpp"
+}
 }
